--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>My Website : Pardhiv Reddy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/slimmenu.css" rel="stylesheet" media="screen">
 <script src="js/jquery.min.js"></script>
@@ -46,12 +46,12 @@
 					<div class="da-slide">
 						<h2>CyberIntruder</h2>
 						<p>CyberIntruder is my blog related to information Security</p>
-						<a href="http://www.cyberintruder.com" class="da-link"><span> READ NOW</span></a>
+						<a href="https://www.cyberintruder.com" class="da-link"><span> READ NOW</span></a>
 					</div>
 					<div class="da-slide">
 						<h2>BinaryMaps</h2>
 						<p>Contact me for professional services and trainings</p>
-						<a href="http://www.binarymaps.com" class="da-link"><span> READ NOW</span></a>
+						<a href="https://www.binarymaps.com" class="da-link"><span> READ NOW</span></a>
 					</div>
 					<nav class="da-arrows">
 						<span class="da-arrows-prev"></span>
