--- a/index.html
+++ b/index.html
@@ -427,10 +427,10 @@
 						<div class="widget column three">
 							<h4>My WishList</h4>
 							<ul class="plain">
-								<li><a href="http://www.parrot.com/zik/">Parrot Zik</a></li>
-								<li><a href="http://www.sony.co.in/productcategory/hv-personal-3d-viewer">Sony Personal 3D viewer</a></li>
+								<li><a href="https://www.parrot.com/zik/">Parrot Zik</a></li>
+								<li><a href="https://www.sony.co.in/productcategory/hv-personal-3d-viewer">Sony Personal 3D viewer</a></li>
 								<li><a href="https://www.apple.com/in/iphone-5s/">iPhone 5S</a></li>
-								<li><a href="http://gopro.com/">GoPro Camera</a></li>
+								<li><a href="https://gopro.com/">GoPro Camera</a></li>
 								<li><a href="https://www.apple.com/in/macbook-air/">MacBook Air</a></li>
 								<div class="clear"> </div>	
 							</ul>
@@ -455,7 +455,7 @@
 				</div><!-- row-content -->	
 			</div><!-- row -->	
 			<div class="copy">
-				       <p>© 2014 by <a href="http://www.pardhivreddy.com" target="_blank">Pardhiv Reddy</a></p>
+				       <p>© 2014 by <a href="https://www.pardhivreddy.com" target="_blank">Pardhiv Reddy</a></p>
 			  </div>
 			  <!-- scroll_top_btn -->
 		<script type="text/javascript" src="js/move-top.js"></script>
